@startuml
scale 0.5
set separator none

interface KeyListener {
      + keyTyped(KeyEvent): void
      + keyPressed(KeyEvent): void
      + keyReleased(KeyEvent): void
}
package unibo.exiled
{
  package model.controller {
    interface GameController {
      + getCharacterController(): CharacterController
    }
    
    class GameControllerImpl implements GameController {}
  
    interface CharacterController {
      + move(Direction): void
    }
    
    class CharacterControllerImpl implements CharacterController {}

  }
  
  package view {
    package character{
      class CharacterView{
      }
    }
    class GameView {
      
    }
  }
  
  package items{
    
    class GameKeyListener implements KeyListener{}
  }
  
  package model.character {
    class CharacterModel {
      + movePlayer(Direction): void
      + moveEnemies(): void
    }
  }


}

GameView *- "1" GameKeyListener
GameView *-- "1" GameController
GameView *-- "N" CharacterView
GameControllerImpl *-- "1" CharacterController
CharacterControllerImpl  *-- "1" CharacterModel


@enduml

